--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
-        ],
+        ],"post-install-cmd": [
+        "php artisan storage:link"
+    ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
